<resources>
    <string name="app_name">Fresh and Safe</string>
    <string name="lets_shop">Lets Shop</string>
    <string name="splash_text">Lorem ipsum dolor sit amet, consectetur dipisicing elit,</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="fullnames">Full names</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="location">Location</string>
    <string name="sign_up">Sign up</string>
    <string name="wallet">Wallet</string>
    <string name="dashboard">Dashboard</string>
    <string name="ad_text_one">Whats’s on the menu\nthis summer?</string>
    <string name="ad_text_two"><![CDATA[Fruit, Vegetable\n& More Vegetables]]></string>
    <string name="ad_text_three">UpTO 10% Off</string>
    <string name="available_balance">Available Balance</string>
    <string name="load_money">+ Load Money</string>
    <string name="cash_kshs">Cash(KSHS)</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="title_activity_trial">TrialActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="today">Today</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="my_cart">My Cart</string>
    <string name="broccoli">Broccoli</string>
    <string name="ksh">ksh.</string>
    <string name="checkout">Checkout</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="promo_code">Promo Code?</string>
    <string name="my_address">My Address</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="payment">Payment</string>
    <string name="payments">Payments</string>
    <string name="credit_card">Credit Card</string>
    <string name="m_pesa">M-Pesa</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="my_wallet">My wallet</string>
    <string name="pay">Pay</string>
    <string name="payment_details">Payment details</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV ?</string>
    <string name="total_amount">Total Amount</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="faqs">FAQs</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="transactions">Transactions</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string-array name="spinnerCategoryItems">
        <item>Categories</item>
    </string-array>
    <string-array name="month">
        <item>MM</item>
    </string-array>
    <string-array name="year">
        <item>YYYY</item>
    </string-array>
</resources>
